# Deep-Freetime

./: Env1_debug.py  Freetime Env1.ipynb  GridEnv.py  Inits.py  Net_Qtable.py  Network_QTable.ipynb  Network_QTable_debug.py  Opt Atari .ipynb  Opt Env 2.py  SB3_Pong.ipynb  SB3_Pong.py  WindyGrid_Env1.py  WindyGrid_Env3.ipynb  WindyGrid_Env3_G.ipynb  WindyGrid_Env4.ipynb  main.py  pong_dqn.py  run_freetime.py
SB3_f/: Dockerfile  Makefile  README.md  setup.cfg  setup.py
SB3_f/docs/: conf.py
SB3_f/docs/common/: atari_wrappers.rst  distributions.rst  env_checker.rst  env_util.rst  envs.rst  evaluation.rst  logger.rst  monitor.rst  noise.rst  utils.rst
SB3_f/docs/guide/: callbacks.rst  checking_nan.rst  custom_env.rst  custom_policy.rst  examples.rst  export.rst  integrations.rst  migration.rst  quickstart.rst  rl_tips.rst  save_format.rst  tensorboard.rst  vec_envs.rst
SB3_f/docs/misc/: changelog.rst  projects.rst
SB3_f/docs/modules/: a2c.rst  base.rst  ddpg.rst  dqn.rst  her.rst  ppo.rst  sac.rst  td3.rst
SB3_f/sb3f/: __init__.py
SB3_f/sb3f/a2c/: __init__.py  a2c.py  policies.py
SB3_f/sb3f/common/: atari_wrappers.py  base_class.py  buffers.py  callbacks.py  distributions.py  env_checker.py  env_util.py  evaluation.py  monitor.py  (+9 more)
SB3_f/scripts/: build_docker.sh
SB3_f/tests/: test_buffers.py  test_callbacks.py  test_cnn.py  test_custom_policy.py  test_deterministic.py  test_dict_env.py  test_distributions.py  test_env_checker.py  test_envs.py  test_gae.py  test_her.py  test_identity.py  test_logger.py  test_monitor.py  test_predict.py  test_run.py  test_save_load.py  test_sde.py  test_spaces.py  test_tensorboard.py  test_train_eval_mode.py  test_utils.py  test_vec_check_nan.py  test_vec_envs.py  test_vec_extract_dict_obs.py  test_vec_monitor.py  test_vec_normalize.py
(+144 files in other folders)
